<resources>
    <string name="app_name">MyKoshik</string>

    <string name="dialog_text1_splashscreen">Чи бажаєте Ви оновити \nверсію продуктів?</string>
    <string name="dialog_text2_splashscreen">\nВаша версія :\u0020</string>
    <string name="dialog_text_yes">Так</string>
    <string name="dialog_text_no">Ні</string>
    <string name="dialog_inline_version">10.03</string>

    <string name="text_milk">Молоко</string>
    <string name="text_eggs">Яйця</string>
    <string name="text_bread">Хліб</string>

    <string-array name="spinner_types_of_sort">
        <item>За чергою продуктів</item>
        <item>За цінами продуктів ↓ </item>
        <item>За цінами продуктів ↑ </item>
        <item>За супермаркетами</item>
    </string-array>

    <string name="spinner_choose_type_of_product">Оберіть продукт :</string>

    <string name="button_buy_product">Купити продукт №</string>
    <string name="button_delete_product">Видалити продукт №</string>
    <string name="button_continue">Далі</string>
    <string name="button_clear">Очистити</string>
    <string name="button_list_of_products">Список продуктів</string>
    <string name="button_choose_product">Обрати продукт</string>

    <string name="text_downloading">Завантаження продуктів. Зачекайте трошки</string>

    <string name="problem_not_avaible_product">На жаль данний продукт не доступний</string>
    <string name="problem_empty_list">Список продуктів пустий</string>
    <string name="problem_choose_button">\n Оберіть одну кнопку аби продовжити</string>
    <string name="problem_searchbar_not_found">Продукт не було знайдено</string>
    <string name="problem_internet_connection">Проблема з підключенням до інтернету</string>

    <string name="toast_cleared_list">Список покупок був видален</string>
    <string name="toast_deleted_product">Продукт був видаленим зі списку покупок</string>
    <string name="toast_added_product">Продукт був доданий до списку покупок</string>

    <string name="price_of_list">Загальна ціна =\u0020</string>
    <string name="count_of_products_list">Кількість продуктів =\u0020</string>

    <!-- * MainActivity Comments -->
    <!-- Unrealized Tasks -->
    <string name="mainactivity_unavailable_task">Дана частина ще розробляється :)</string>

    <!-- Spinner Items -->
    <string-array name="mainactivity_types_of_product">
        <item>Молоко</item>
        <item>Яйця</item>
        <item>Хліб</item>
    </string-array>

    <!-- Spinner Textes -->
    <string name="mainactivity_choose_one_product">Оберіть один продукт :</string>
    <string name="mainactivity_close_dialog">Закрити</string>

    <!-- Products -->
    <string name="mainactivity_milk">Молоко</string>
    <string name="mainactivity_eggs">Яйця</string>
    <string name="mainactivity_bread">Хліб</string>

    <!-- CardView Names -->
    <string name="mainactivity_buy">Купити</string>
    <string name="mainactivity_product_basket">Кошик</string>
    <string name="mainactivity_notes">Нотатки</string>
    <string name="mainactivity_alarm">Нагадати</string>
    <string name="mainactivity_resources">Ресурси</string>
    <string name="mainactivity_settings">Допомога</string>
    <string name="mainactivity_instruction">Підказки</string>
    <string name="mainactivity_letter">Підтримка</string>


    <!-- Site Links (Logos) -->
    <string name="mainactivity_site_links">Зображення взяті з сайтів \nFreepik та IconFinder : \n\nhttps://www.freepik.com \nhttps://www.iconfinder.com</string>
    <!-- MainActivity Comments * -->


    <!-- * AppIntroActivity Comments -->
    <!-- Intro Slides -->
    <string name="appintroactivity_welcome">ЛАСКАВО ПРОСИМО В \"МІЙ КОШИК\"!</string>
    <string name="appintroactivity_product_list">ФОРМУЙ СПИСОК З НАЙВАЖЛИВІШИХ ПРОДУКТІВ!</string>
    <string name="appintroactivity_supermarket1">3 МЕРЕЖІ СУПЕРМАРКЕТІВ НА ВИБІР!</string>
    <string name="appintroactivity_supermarket2">NOVUS, MEGAMARKET ТА FOZZY</string>
    <string name="appintroactivity_spare">ЗАОЩАДЖУЙ ПРАВИЛЬНО З \n НАШИМ ДОДАТКОМ</string>'

    <!-- Intro Text -->
    <string name="appintroactivity_skip">Пропустити</string>
    <string name="appintroactivity_next">ДАЛІ</string>

    <!-- * AppIntroActivity Comments -->


    <!-- * AlarmActivity Comments -->
    <!-- Added Alarm Toast  -->
    <string name="alarmactivity_added_alarm_toast">Нове навагадування успішно було додано</string>

    <!-- EditText Hint  -->
    <string name="alarmactivity_edittext_hint">Опис</string>

    <!-- Week Days  -->
    <string name="alarmactivity_monday">ПН</string>
    <string name="alarmactivity_tuesday">ВТ</string>
    <string name="alarmactivity_wednesday">СР</string>
    <string name="alarmactivity_thursday">ЧТ</string>
    <string name="alarmactivity_friday">ПТ</string>
    <string name="alarmactivity_saturday">СБ</string>
    <string name="alarmactivity_sunday">НД</string>
    <!-- AlarmActivity Comments * -->
</resources>
